2020-01-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: Store idle handler ids

	and use them to remove the corresponding sources at dispose
	time, instead of taking a strong reference to the BalsaIndex and
	then testing whether it is the last reference.

	* src/balsa-index.c (bndx_destroy), (bndx_selection_changed_idle),
	(bndx_selection_changed), (bndx_scroll_on_open_idle),
	(balsa_index_scroll_on_open), (bndx_queue_draw_idle),
	(bndx_mailbox_changed_idle), (bndx_mailbox_changed_cb):

2019-11-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Address book editor: do not crash if no address books are
	available for editing.

	* src/ab-main.c (bab_set_intial_address_book), (main): check for
	NULL address book list.

2019-11-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	libbalsa_message_body_get_mime_type() is guaranteed to return a
	lower case string, so we can safely use strcmp().

	* libbalsa/body.c (libbalsa_message_body_set_parts),
	(libbalsa_message_body_get_pixbuf),
	(libbalsa_message_body_is_flowed):
	* libbalsa/html.c (lbh_cid_cb), (libbalsa_html_type):
	* src/balsa-message.c (mpart_content_name), (display_part),
	(part_create_menu), (libbalsa_can_display), (preferred_part),
	(get_crypto_content_icon), (libbalsa_msg_try_decrypt),
	(libbalsa_msg_perform_crypto_real):
	* src/balsa-mime-widget.c (balsa_mime_widget_new):
	* src/balsa-print-object.c (balsa_print_objects_append_from_body):
	* src/print-gtk.c (find_alt_part), (scan_body):

2019-11-17  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix handling of Multipart/Related

	* libbalsa/body.[ch]: implement a new helper function
	  libbalsa_message_body_mp_related_root() returning the root object
	  of a multipart/related;
	* libbalsa/html.c: pass the HTML body to the Webkit callbacks
	  when printing;
	* src/balsa-message.c: use the new helper for fetching the
	  multipart/related root object;
	* src/print-gtk.c: properly handle multipart/related
