@@ -1,3 +1,12 @@
+2020-01-06  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	main-window: Disconnect from a network monitor signal
+
+	to avoid scheduling an idle callback after some objects have
+	been finalized.
+
+	* src/main-window.c (balsa_window_destroy):
+
 2020-01-02  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	balsa-index: Store idle handler ids
